# SENT

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  main.py  pyproject.toml
analysis/: detonator.py  differ.py  php_patterns.py
graph/: sbom.py
ingestion/: wordpress.py
